apps/autobutler-home/infra/cluster-nodes/bw-cms/templates/cms-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: birchwood-cms
  namespace: cms
spec:
  hosts:
  - "cms.k8s.birchwood.com"
  gateways:
  - shared/birchwood-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: birchwood-cms.cms.svc.cluster.local
        port:
          number: 80
